--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-# title: PiC: Phrase in Context
-# description: A Dataset for Phrase Understanding and Semantic Search
+title: "PiC: Phrase in Context"
+description: "A Dataset for Phrase Understanding and Semantic Search"
