--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@ colors:
     link: "#1e6bb8"           # this default to gradient_color
     section_title: "#155799"  # this default to gradient_color
 buttons:
-      zip_url: https://auburn.edu/~tmp0038/PiC.zip
+      zip_url: "https://auburn.edu/~tmp0038/PiC.zip"
       zip_title: "Download PiC.zip"
       zip_hide: false
-      tar_url: http://example.com/
+      tar_url: "http://example.com/"
       tar_title: "Download PiC.tar.gz"
       tar_hide: true
-      github_url: https://github.com/Phrase-in-Context
+      github_url: "https://github.com/Phrase-in-Context"
       github_title: "View on Github"
       github_hide: false
 
