--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-cayman
 title: "PiC: Phrase in Context"
 description: "A Dataset for Phrase Understanding and Semantic Search"
 
-show_downloads: true
+# show_downloads: true
 # google_analytics: 320505909
 # google_analytics_anonymize: false
 # darkmode: false
