--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: "PiC: Phrase in Context"
 description: "A Dataset for Phrase Understanding and Semantic Search"
 show_downloads: true
 theme: jekyll-theme-cayman
+remote_theme: tuur29/pages-themes-cayman
 buttons:
   zip_url: https://auburn.edu/~tmp0038/PiC.zip
   zip_title: "Download PiC.zip"
