--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ description: "A Dataset for Phrase Understanding and Semantic Search"
 theme: jekyll-theme-cayman
 remote_theme: tuur29/pages-themes-cayman
 
-google_analytics: 320505909
-google_analytics_anonymize: false
-darkmode: false
-show_downloads: true
+# google_analytics: 320505909
+# google_analytics_anonymize: false
+# darkmode: false
+# show_downloads: true
 
 # color:
 #     gradient_left: "#155799"
@@ -19,10 +19,10 @@ buttons:
     zip_url: "https://auburn.edu/~tmp0038/PiC.zip"
     zip_title: "Download PiC.zip"
     zip_hide: false
-    tar_url: "http://example.com/"
-    tar_title: "Download PiC.tar.gz"
+#     tar_url: "http://example.com/"
+#     tar_title: "Download PiC.tar.gz"
     tar_hide: true
-    github_url: "https://github.com/Phrase-in-Context"
-    github_title: "View on Github"
-    github_hide: false
+#     github_url: "https://github.com/Phrase-in-Context"
+#     github_title: "View on Github"
+    github_hide: true
 
