--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ remote_theme: tuur29/pages-themes-cayman
 #     link: "#1e6bb8"           # this default to gradient_color
 #     section_title: "#155799"  # this default to gradient_color
 buttons:
-    zip_url: "https://auburn.edu/~tmp0038/PiC.zip"
+    zip_url: https://auburn.edu/~tmp0038/PiC.zip
     zip_title: "Download PiC.zip"
     zip_hide: false
 #     tar_url: "http://example.com/"
