--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ buttons:
 #     tar_url: "http://example.com/"
 #     tar_title: "Download PiC.tar.gz"
     tar_hide: true
-#     github_url: "https://github.com/Phrase-in-Context"
-#     github_title: "View on Github"
-    github_hide: true
+    github_url: "https://github.com/Phrase-in-Context"
+    github_title: "View on Github"
+    github_hide: false
 
