--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "A Dataset for Phrase Understanding and Semantic Search"
 theme: jekyll-theme-cayman
 remote_theme: tuur29/pages-themes-cayman
 
-google_analytics: 320505909
+google_analytics: "G-QX66PLF8G6"
 google_analytics_anonymize: false
 darkmode: false
 show_downloads: true
