--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,5 @@ navbar-links:
 contact: "thangpham@auburn.edu"
 google-group: "https://groups.google.com/u/1/g/phrase-in-context"
 
+remove-ads: true
+
