Add email address

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ navbar-links:
     Phrase Sense Disambiguation: "phrase_sense_disambiguation"
     Evaluation: "evaluation"
 
-contact: "thangpham@auburn.edu"
+contact: "phrase-in-context@googlegroups.com"
 google-group: "https://groups.google.com/u/1/g/phrase-in-context"
 
 remove-ads: true
