--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ navbar-links:
     Phrase Similarity: "phrase_similarity"
     Phrase Retrieval: "phrase_retrieval"
     Phrase Sense Disambiguation: "phrase_sense_disambiguation"
-    Evaluation: "evaluation"
+    # Evaluation: "evaluation"
 
 contact: "phrase-in-context@googlegroups.com"
 google-group: "https://groups.google.com/u/1/g/phrase-in-context"
